--- a/main.html
+++ b/main.html
@@ -7,6 +7,12 @@
 
   <body>
     <!-- write the body here -->
+	  <form>
+	  <input type='number' id='age' placeholder='Enter age'>
+	  <input type='text' id='name' placeholder='Enter name'>
+	  <button type='submit' id='btn'>Submit</button>
+	  </form>
+	  
 
     <script type="text/javascript" src="./script.js"></script>
   </body>
